RESOLVED FIXED136696
[MIPS] branch32WithPatch missing
https://bugs.webkit.org/show_bug.cgi?id=136696
Summary [MIPS] branch32WithPatch missing
Alberto Garcia
Reported 2014-09-10 01:34:54 PDT
WebKitGTK+ fails to build in mips due to missing branch32WithPatch(): [ 2%] Building CXX object Source/JavaScriptCore/CMakeFiles/LLIntOffsetsExtractor.dir/llint/LLIntOffsetsExtractor.cpp.o [...] In file included from /«BUILDDIR»/webkit2gtk-2.5.3+dfsg1/Source/JavaScriptCore/bytecode/ValueRecovery.h:35:0, from /«BUILDDIR»/webkit2gtk-2.5.3+dfsg1/Source/JavaScriptCore/bytecode/CodeOrigin.h:32, from /«BUILDDIR»/webkit2gtk-2.5.3+dfsg1/Source/JavaScriptCore/bytecode/CodeBlock.h:42, from /«BUILDDIR»/webkit2gtk-2.5.3+dfsg1/Source/JavaScriptCore/llint/LLIntOffsetsExtractor.cpp:29: /«BUILDDIR»/webkit2gtk-2.5.3+dfsg1/Source/JavaScriptCore/assembler/MacroAssembler.h: In member function 'JSC::AbstractMacroAssembler<JSC::MIPSAssembler>::PatchableJump JSC::MacroAssembler::patchableBranch32WithPatch(JSC::MacroAssemblerMIPS::RelationalCondition, JSC::AbstractMacroAssembler<JSC::MIPSAssembler>::Address, JSC::AbstractMacroAssembler<JSC::MIPSAssembler>::DataLabel32&, JSC::AbstractMacroAssembler<JSC::MIPSAssembler>::TrustedImm32)': /«BUILDDIR»/webkit2gtk-2.5.3+dfsg1/Source/JavaScriptCore/assembler/MacroAssembler.h:350:88: error: 'branch32WithPatch' was not declared in this scope return PatchableJump(branch32WithPatch(cond, left, dataLabel, initialRightValue)); Full log here: https://buildd.debian.org/status/fetch.php?pkg=webkit2gtk&arch=mipsel&ver=2.5.3%2Bdfsg1-1&stamp=1409924238
Attachments
proposed fix (1.63 KB, patch)
2014-09-10 06:05 PDT, Peter Gal
no flags
Peter Gal
Comment 1 2014-09-10 06:05:38 PDT
Created attachment 237886 [details] proposed fix
Michael Saboff
Comment 2 2014-09-10 07:24:13 PDT
Comment on attachment 237886 [details] proposed fix r=me
WebKit Commit Bot
Comment 3 2014-09-10 07:59:41 PDT
Comment on attachment 237886 [details] proposed fix Clearing flags on attachment: 237886 Committed r173461: <http://trac.webkit.org/changeset/173461>
WebKit Commit Bot
Comment 4 2014-09-10 07:59:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.