[MIPS] branch32WithPatch missing https://bugs.webkit.org/show_bug.cgi?id=136696

Reviewed by Michael Saboff.

Added the missing branch32WithPatch. The implementation
is currently the same as the branchPtrithPatch because
the macro assembler supports only 32 bit MIPS.

* assembler/MacroAssemblerMIPS.h:
(JSC::MacroAssemblerMIPS::branch32WithPatch):


Canonical link: https://commits.webkit.org/154510@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173461 268f45cc-cd09-0410-ab3c-d52691b4dbfc